--- a/src/Component/DarkMode/DarkMood.css
+++ b/src/Component/DarkMode/DarkMood.css
@@ -1,68 +1,43 @@
-.dark_mode {
-    margin-top: -20px;
-    margin-left: 10px;
-}
-
-.dark_mode_label {
-    width: 65px;
+.dark_mode_input {
+    display: none;
+  }
+  
+  .toggle-wrapper {
+    width: 60px;
     height: 30px;
+    border-radius: 15px;
+    background-color: #ccc;
     position: relative;
-    display: block;
-    background: #ebebeb;
-    border-radius: 200px;
-    box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
-        inset 0px -5px 15px rgba(255, 255, 255, 0.4);
     cursor: pointer;
-    transition: 0.3s;
-}
-.dark_mode_label:after {
-    content: "";
-    width: 25px;
-    height: 25px;
+  }
+  
+  .toggle {
+    width: 24px;
+    height: 24px;
+    background-color: #fff;
+    border-radius: 50%;
     position: absolute;
     top: 3px;
     left: 3px;
-    background: linear-gradient(180deg, #ffcc89, #d8860b);
-    border-radius: 180px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-}
-.dark_mode_input {
-    width: 0;
-    height: 0;
-    visibility: hidden;
-}
-.dark_mode_input:checked + .dark_mode_label {
-    background: #242424;
-}
-.dark_mode_input:checked + .dark_mode_label:after {
-    left: 62px;
-    transform: translateX(-100%);
-    background: linear-gradient(180deg, #777, #3a3a3a);
-}
-.dark_mode_label:active:after {
-    width: 30px;
-}
-
-.dark_mode_label img {
+    transition: transform 0.3s ease;
+  }
+  
+  .toggle-handle {
+    width: 18px;
+    height: 18px;
+    background-color: #777;
+    border-radius: 50%;
     position: absolute;
-    width: 20px;
-    top: 5px;
-    z-index: 100;
-}
-.dark_mode_label svg.sun {
-    left: 5px;
-    fill: #fff;
-    transition: 0.3s;
-}
-.dark_mode_label svg.moon {
-    left: 40px;
-    fill: #7e7e7e;
-    transition: 0.3s;
-}
-.dark_mode_input:checked + .dark_mode_label svg.sun {
-    fill: #7e7e7e;
-}
-.dark_mode_input:checked + .dark_mode_label svg.moon {
-    fill: #fff;
-}
+    top: 3px;
+    left: 3px;
+    transition: left 0.3s ease;
+  }
+  
+  .dark_mode_input:checked + .dark_mode_label .toggle {
+    transform: translateX(30px);
+  }
+  
+  .dark_mode_input:checked + .dark_mode_label .toggle-handle {
+    left: 33px;
+  }
+  
